# PyDrive4

./: .gitignore  README.md  basic_usage.py  pyproject.toml  test.py
.github/workflows/: pypi-publish.yml
pydrive4/: __init__.py  auth.py  client.py
