[project]
name = "pydrive4"
version = "0.1.0"
description = "A simplified Google Drive API v3 wrapper library for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["google-drive", "google-api", "cloud-storage", "file-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.15.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "rich>=14.2.0",
]


[project.urls]
Homepage = "https://github.com/SSujitX/pydrive4"
Repository = "https://github.com/SSujitX/pydrive4"
Documentation = "https://github.com/SSujitX/pydrive4#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydrive4"]
